--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ varying vec3 lookVector;
 
 void main(void) {
 
+  bool bug = false;
+
   float directionalLightWeighting = max(dot(vNormal, uLightingDirection), 0.0);
   
   if (!useDirectionalLight) {
@@ -42,12 +44,12 @@ void main(void) {
   float phongSpecularExponent = 17.0;
   
   float specularWeight = pow(directionalLightWeighting, phongSpecularExponent);
-  
+
   if (!useSpecularLight) {
     specularWeight = 0.0;    
   }
   
-  vec3 specularLight = vec3(1.0, 1.0, 1.0) * specularWeight;
+  vec3 specularLight = vec3(0.8, 0.8, 0.8) * specularWeight;
   
   vec3 pos2frag = -vertexPosInWorld.xyz;
   float dist = sqrt(dot(pos2frag, pos2frag));
@@ -60,6 +62,7 @@ void main(void) {
     float smoothCoeff = min(1.0, (coneCos - 0.95) * 10.0);
     float lookCos = dot(vNormal, lookVector);
     angularComponent = max(lookCos * smoothCoeff, 0.0);
+  
     positionalSpecularWeight = pow(lookCos, phongSpecularExponent) * smoothCoeff;
   }
   
@@ -87,7 +90,11 @@ void main(void) {
   
   vec3 color = specularLight + directionalLight + positionalLight + positionalSpecular + ambient; 
   
-  gl_FragColor = vec4(color, 1.0); 
+  if (!bug) {
+    gl_FragColor = vec4(color, 1.0);
+  } else {
+    gl_FragColor = vec4(0.0, 0.5, 0.0, 1.0);
+  } 
 }
     
     
@@ -146,5 +153,16 @@ function Start() {
 -->
 
 </body>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-39924946-2', 'kapsi.fi');
+  ga('send', 'pageview');
+
+</script>
 
 </html>
